assets/book.scss
@import "normalize";
@import "variables";
@import "markdown";
@import "shortcode";
@import "utils";

html {
  font-size: $font-size-base;
  letter-spacing: 0.33px;
  scroll-behavior: smooth;
}

html,
body {
  min-width: $body-min-width;
  overflow-x: hidden;
}

body {
  color: $body-font-color;
  background: $body-background;

  font-family: sans-serif;
  font-weight: $body-font-weight;

  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  box-sizing: border-box;
  * {
    box-sizing: inherit;
  }
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: 400;
}

a {
  text-decoration: none;
  color: $color-link;

  &:visited {
    color: $color-visited-link;
  }
}

img {
  vertical-align: middle;
}

aside nav ul {
  padding: 0;
  margin: 0;
  list-style: none;

  li {
    margin: 1em 0;
  }

  a {
    display: block;
  }

  a:hover {
    opacity: 0.5;
  }

  ul {
    padding-left: $padding-16;
  }
}

ul.pagination {
  display: flex;
  justify-content: center;

  .page-item a {
    padding: $padding-16;
  }
}

.container {
  max-width: $container-max-width;
  margin: 0 auto;
}

.book-brand {
  margin-top: 0;
}

.book-menu {
  flex: 0 0 $menu-width;
  font-size: $font-size-14;

  nav {
    width: $menu-width;
    padding: $padding-16;

    @include fixed;
  }

  @include dark-links;
}

.book-section-flat {
  margin-bottom: $padding-16 * 2;

  > a,
  > span {
    font-weight: 600;
  }

  > ul {
    padding-left: 0;
  }
}

.book-page {
  min-width: $body-min-width;
  flex-grow: 1;
  padding: $padding-16;
}

.book-header {
  margin-bottom: $padding-16;
  display: none;
}

.book-toc {
  flex: 0 0 $toc-width;
  font-size: $font-size-12;

  nav {
    width: $toc-width;
    padding: $padding-16;

    @include fixed;
  }

  nav > ul > li {
    margin: 0;
  }
}

.book-git-footer {
  display: flex;
  margin-top: $padding-16;
  font-size: $font-size-14;
  align-items: baseline;

  img {
    width: $font-size-14;
    vertical-align: bottom;
  }
}

.book-footer {
  display: flex;
  margin-top: $padding-16;
  font-size: $font-size-14;
  align-items: baseline;

  img {
    width: $font-size-14;
    vertical-align: bottom;
  }
}

.book-posts {
  min-width: $body-min-width;
  max-width: $sm-breakpoint;
  flex-grow: 1;
  padding: $padding-16;

  article {
    padding-bottom: $padding-16;
  }
}

.book-home {
  padding: $padding-16;
}

// Responsive styles
aside nav,
.book-page,
.book-posts,
.markdown {
  transition: 0.2s ease-in-out;
  transition-property: transform, margin-left, opacity;
  will-change: transform, margin-left;
}

@media screen and (max-width: $md-breakpoint) {
  .book-toc {
    display: none;
  }
}

@media screen and (max-width: $sm-breakpoint) {
  .book-menu {
    margin-left: -$menu-width;
  }

  .book-header {
    display: flex;
  }

  #menu-control:checked + main {
    .book-menu nav,
    .book-page,
    .book-posts {
      transform: translateX($menu-width);
    }

    .book-header label {
      transform: rotate(90deg);
    }

    .markdown {
      opacity: 0.25;
    }
  }
}

// Extra space for big screens
@media screen and (min-width: $container-max-width) {
  .book-page,
  .book-posts,
  .book-menu nav,
  .book-toc nav {
    padding: $padding-16 * 2 $padding-16;
  }
}

// Add fonts
@import "fonts";

// Add custom defined styles
@import "custom";

